--- a/docker_compose/docker-compose-with-nginx-scale.yml
+++ b/docker_compose/docker-compose-with-nginx-scale.yml
@@ -2,13 +2,18 @@ version: '3.1'
 networks:
   example-network:
 services:
+
   example-api:
     build: .
     depends_on:
       - postgres
+    environment:
+      DATABASE_URI: "postgres://postgres:password@example-database:5432/postgres"
     networks:
       - example-network
     command: ["./wait_for_it.sh", "example-database:5432", "--", "node", "index.js"]
+
+
   postgres:
     image: postgres
     container_name: example-database
@@ -22,6 +27,8 @@ services:
       - 5432:5432
     networks:
       - example-network
+
+
   nginx:
     image: nginx
     container_name: nginx-example
