--- a/docker_compose/docker-compose.yml
+++ b/docker_compose/docker-compose.yml
@@ -2,15 +2,20 @@ version: '3.1'
 networks:
   example-network:
 services:
+
   example-api:
     build: .
     ports:
       - "3456:3456"
+    environment:
+      DATABASE_URI: "postgres://postgres:password@example-database:5432/postgres"
     depends_on:
       - postgres
     networks:
       - example-network
     command: ["./wait_for_it.sh", "example-database:5432", "--", "node", "index.js"]
+
+
   postgres:
     image: postgres
     container_name: example-database
