--- a/tenancy_seguridad/docker-compose.yml
+++ b/tenancy_seguridad/docker-compose.yml
@@ -1,20 +1,18 @@
-version: '3.1'
+version: "3.8"
 networks:
   example-network:
 services:
-
   example-api:
     build: .
-    ports:
-      - "3456:3456"
-    environment:
-      DATABASE_URI: "postgres://postgres:password@example-database:5432/postgres"
     depends_on:
       - postgres
+    environment:
+      DATABASE_URI: "postgres://postgres:password@example-database:5432/postgres"
+      JWT_SECRET: "some_secret_here-123423341213"
     networks:
       - example-network
-    command: ["./wait_for_it.sh", "example-database:5432", "--", "node", "index.js"]
-
+    command:
+      ["./wait_for_it.sh", "example-database:5432", "--", "node", "index.js"]
 
   postgres:
     image: postgres
@@ -29,3 +27,16 @@ services:
       - 5432:5432
     networks:
       - example-network
+
+  nginx:
+    image: nginx
+    container_name: nginx-example-2
+    ports:
+      - 3535:80
+    depends_on:
+      - example-api
+    networks:
+      - example-network
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./var/log/nginx:/var/log/nginx
